full-moon/tests/cfxlua_cases/fail/tokenizer/c_style_comments/source.lua
print("Hello, World!") /* Comment
local a = 2
